--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
     <meta property="og:title" content="Sofas for home and office">
     <meta property="og:description" content="Luxury furniture from Italy">
-    <meta property="og:image" content="https://scontent-lga3-1.xx.fbcdn.net/v/t39.30808-6/334053327_936586487360347_98869398013064833_n.jpg?stp=dst-jpg_p843x403&_nc_cat=101&ccb=1-7&_nc_sid=730e14&_nc_ohc=OuNJuIvHq8wAX876R5Y&_nc_ht=scontent-lga3-1.xx&oh=00_AfCFq6XZzYf-fPwXebzxHO6ToyOy5Y-LVHoPgdSvFYjo3g&oe=64057C51">
+    <meta property="og:image" content="https://thumb.tildacdn.com/tild3632-3162-4235-a364-633166633139/-/format/webp/photo.png">
 Website in development
